fix: correct image visibility

--- a/frontend/src/app/pages/main/main.scss
+++ b/frontend/src/app/pages/main/main.scss
@@ -19,8 +19,8 @@
 }
 
 .image {
-  inline-size: 5.5rem;
-  block-size: 5.5rem;
+  inline-size: 10rem;
+  block-size: 10rem;
 }
 
 .card {
